Created Song class

--- a/SpotiBox/Base.lproj/Main.storyboard
+++ b/SpotiBox/Base.lproj/Main.storyboard
@@ -47,28 +47,46 @@
             </objects>
             <point key="canvasLocation" x="-273" y="-111"/>
         </scene>
-        <!--View Controller-->
+        <!--Table ViewVC-->
         <scene sceneID="gn7-s2-n9V">
             <objects>
-                <viewController id="nHa-xF-Um8" sceneMemberID="viewController">
+                <viewController id="nHa-xF-Um8" customClass="TableViewVC" customModule="SpotiBox" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dEy-W0-2Di">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mcR-qu-V4o">
-                                <rect key="frame" x="150" y="283" width="30" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="YO!"/>
-                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="DD9-0c-z2n">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="4xG-h2-thp">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4xG-h2-thp" id="GC5-jB-gnu">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="DD9-0c-z2n" secondAttribute="trailing" id="F3I-d4-kOm"/>
+                            <constraint firstItem="DD9-0c-z2n" firstAttribute="bottom" secondItem="Qsl-8S-Xu3" secondAttribute="bottom" id="RfK-qK-Jx4"/>
+                            <constraint firstItem="DD9-0c-z2n" firstAttribute="leading" secondItem="dEy-W0-2Di" secondAttribute="leading" id="ZeO-a4-vUT"/>
+                            <constraint firstItem="DD9-0c-z2n" firstAttribute="top" secondItem="Qsl-8S-Xu3" secondAttribute="top" id="eb0-dH-Trx"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Qsl-8S-Xu3"/>
                     </view>
                     <navigationItem key="navigationItem" id="E2h-lm-Hhd"/>
+                    <connections>
+                        <outlet property="tableView" destination="DD9-0c-z2n" id="DYL-eX-d6H"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1XN-Bz-T1o" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1226" y="-111"/>
+            <point key="canvasLocation" x="1224.8" y="-111.0944527736132"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="fCo-fl-Grr">
