--- a/SpotiBox/Base.lproj/Main.storyboard
+++ b/SpotiBox/Base.lproj/Main.storyboard
@@ -10,8 +10,12 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="Avenir.ttc">
+            <string>Avenir-Heavy</string>
+        </array>
         <array key="Futura.ttc">
             <string>Futura-Medium</string>
+            <string>Futura-MediumItalic</string>
         </array>
         <array key="Helvetica.ttc">
             <string>Helvetica-Bold</string>
@@ -76,15 +80,24 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Song Name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9rJ-FV-U8n">
                                                     <rect key="frame" x="123" y="11" width="237" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="15"/>
+                                                    <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Song Name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QBb-Tv-Ryb">
+                                                    <rect key="frame" x="123" y="40" width="237" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="Futura-MediumItalic" family="Futura" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="cellSongDuration" destination="QBb-Tv-Ryb" id="nHF-G4-i6c"/>
                                             <outlet property="cellSongImage" destination="kxA-Mg-Byi" id="w4a-Ei-Gqk"/>
                                             <outlet property="cellSongName" destination="9rJ-FV-U8n" id="fb0-bO-CSw"/>
+                                            <segue destination="vDj-bj-6iy" kind="show" id="dgh-KS-eTd"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -107,6 +120,48 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1XN-Bz-T1o" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1224.8" y="-111.0944527736132"/>
+        </scene>
+        <!--MusicVC-->
+        <scene sceneID="mID-7r-o6x">
+            <objects>
+                <viewController id="vDj-bj-6iy" customClass="MusicVC" customModule="SpotiBox" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="rRG-K3-tHd">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="05M-94-1Tp">
+                                <rect key="frame" x="67" y="117" width="240" height="240"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zju-Ug-VsJ">
+                                <rect key="frame" x="67" y="365" width="240" height="68"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="68" id="xzf-6U-IYc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="05M-94-1Tp" firstAttribute="leading" secondItem="Zju-Ug-VsJ" secondAttribute="leading" id="2dQ-Xg-IdE"/>
+                            <constraint firstItem="05M-94-1Tp" firstAttribute="leading" secondItem="Hzl-7L-fhT" secondAttribute="leading" constant="67" id="Ndj-u2-wTL"/>
+                            <constraint firstItem="Zju-Ug-VsJ" firstAttribute="top" secondItem="05M-94-1Tp" secondAttribute="bottom" constant="8" symbolic="YES" id="TTR-jp-e7I"/>
+                            <constraint firstItem="05M-94-1Tp" firstAttribute="trailing" secondItem="Zju-Ug-VsJ" secondAttribute="trailing" id="Ub6-tG-3sb"/>
+                            <constraint firstItem="Hzl-7L-fhT" firstAttribute="bottom" secondItem="Zju-Ug-VsJ" secondAttribute="bottom" constant="234" id="ZrV-7w-lF1"/>
+                            <constraint firstItem="05M-94-1Tp" firstAttribute="centerX" secondItem="rRG-K3-tHd" secondAttribute="centerX" id="jyy-0Z-8rr"/>
+                            <constraint firstItem="05M-94-1Tp" firstAttribute="top" secondItem="Hzl-7L-fhT" secondAttribute="top" constant="53" id="vfl-xP-VsS"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Hzl-7L-fhT"/>
+                    </view>
+                    <connections>
+                        <outlet property="albumCoverImage" destination="05M-94-1Tp" id="5Li-3D-9Ri"/>
+                        <outlet property="songName" destination="Zju-Ug-VsJ" id="Ybz-aQ-ZuV"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="clj-va-lsj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2044" y="-111.0944527736132"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="fCo-fl-Grr">
